# gpg-backend

./: .gitignore  .gitmodules  Pipfile  env.sample  pyproject.toml
apps/account/: admin.py  models.py  resources.py  serializers.py  views.py
apps/account/migrations/: 0001_initial.py  0002_auto_20210423_1209.py  0003_accountfile.py  0004_accountfile_job_order.py  0005_auto_20210910_1318.py  0006_accountfile_job_order_category.py  0007_auto_20211021_2214.py
apps/accounting/: admin.py  models.py
apps/accounting/migrations/: 0001_initial.py  0002_auto_20211111_2101.py
apps/archive/: admin.py
apps/archive/migrations/: 0001_initial.py  0002_auto_20230301_1924.py  0002_auto_20230301_1927.py  0003_merge_0002_auto_20230301_1924_0002_auto_20230301_1927.py
apps/archive/models/: __init__.py  archive_job_order.py  archive_job_order_apn.py
apps/authentication/: admin.py  apps.py  models.py  resources.py  serializers.py  signals.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_auto_20210217_0932.py  0002_auto_20210415_0213.py  0003_auto_20210419_1042.py  0003_client_client_code.py  0004_auto_20210420_0748.py  0004_internalfilesstaff_staff.py  0005_auto_20210422_0842.py  0006_auto_20210429_1318.py  0007_auto_20210430_1416.py  0008_auto_20210510_1210.py  0009_client_email.py  0010_auto_20210511_1213.py  0010_remove_client_email.py  0011_auto_20210827_2001.py  0012_auto_20211021_2214.py  0013_auto_20211111_2146.py  0014_alter_client_user.py  0015_alter_user_designation_category.py
apps/core/: admin.py  models.py  notifications.py
apps/core/migrations/: 0001_initial.py  0002_alter_company_options.py
apps/due_diligence/: admin.py  apps.py
apps/due_diligence/migrations/: 0001_initial.py  0002_phonelineextension_original_extension_owner.py  0003_duediligencecallout.py  0004_phonelineextension_allocation_office.py  0005_auto_20210518_0733.py  0006_auto_20210524_1628.py  0007_auto_20210526_1719.py  0008_auto_20210607_1905.py  0009_auto_20211005_1354.py  0010_auto_20211021_2214.py
apps/due_diligence/models/: __init__.py  due_diligence_callout.py  phone_line_extension.py
apps/due_diligence/serializers/: __init__.py  due_diligence_call_out.py  phone_line_extension.py
apps/due_diligence/views/: __init__.py  due_diligence_call_out.py  phone_line_extension.py
apps/email_template/: admin.py  apps.py  models.py
apps/email_template/migrations/: 0001_initial.py
apps/forum/: admin.py  urls.py
apps/forum/migrations/: 0001_initial.py  0002_auto_20220614_1953.py
apps/forum/models/: __init__.py  thread.py
apps/forum/serializers/: __init__.py  thread.py
apps/forum/views/: __init__.py  thread.py
apps/gpg/: admin.py  apps.py  urls.py
apps/gpg/migrations/: 0001_initial.py  0002_auto_20210312_0825.py  0002_auto_20210312_0909.py  0002_auto_20210315_1301.py  0002_auto_20210316_0009.py  0002_auto_20210317_0846.py  0002_auto_20210318_0722.py  0002_auto_20210319_1423.py  0002_auto_20210323_0711.py  0002_auto_20210324_0707.py  0002_auto_20210325_1322.py  0002_auto_20210326_1553.py  0002_auto_20210329_1227.py  0002_comment.py  0003_county_state.py  0004_auto_20210415_0213.py  0005_auto_20210415_0947.py  0006_auto_20210416_1150.py  0007_auto_20210420_0748.py  0008_propertydetailfile.py  0009_auto_20210420_1027.py  0010_auto_20210421_0949.py  0011_propertydetail_property_owner.py  (+43 more)
apps/gpg_notifications/: apps.py  serializers.py  urls.py  views.py
apps/newsfeed/: admin.py
apps/operational_cost/: admin.py  apps.py  resources.py
apps/resolution/: admin.py
apps/task_designation/: admin.py  apps.py  models.py
apps/timesheet/: admin.py  apps.py  models.py  resources.py
config/: backup.py  urls.py
config/settings/: base.py  drf.py
(+117 files in other folders)
