[tool.poetry]
name = "gpg_backend"
version = "2.0.0"
description = "backend for the GPG system"
authors = ["Xednom <monde.lacanlalay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
django-environ = "^0.4.5"
django-split-settings = "^1.0.1"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.2"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
djoser = {git = "https://github.com/sunscrapers/djoser", rev = "b648b07dc2da7dab4c00c1c39af3d6ec53f58eb6"}
djangorestframework-simplejwt = "^4.6.0"
drf-writable-nested = "^0.6.2"
django-anymail = {extras = ["mailgun"], version = "^8.2"}
django-herald = "^0.2.1"
django-mailer = "^2.1"
django-extensions = "^3.1.1"
django-crontab = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
graphviz = "^0.16"
pydotplus = "^2.0.2"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
