[tool.poetry]
name = "gpg_backend"
version = "2.0.0"
description = "backend for the GPG system"
authors = ["Xednom <monde.lacanlalay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=3.2.8"
django-environ = "^0.4.5"
django-split-settings = "^1.0.1"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.2"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
djangorestframework-simplejwt = "^4.6.0"
drf-writable-nested = "^0.6.2"
django-anymail = {extras = ["mailgun"], version = "^8.2"}
django-herald = "^0.2.1"
django-mailer = "^2.1"
django-extensions = "^3.1.1"
django-crontab = "^0.7.1"
mysqlclient = "^2.0.3"
djoser = "^2.1.0"
appdirs = "==1.4.4"
asgiref = "==3.3.4"
cachecontrol = "==0.12.6"
cachy = "==0.3.0"
certifi = "==2020.12.5"
cffi = "==1.14.5"
chardet = "==4.0.0"
cleo = "==0.8.1"
clikit = "==0.6.2"
crashtest = "==0.3.1"
cryptography = "==3.4.7"
distlib = "==0.3.1"
django = "~=3.2.8"
filelock = "==3.0.12"
html5lib = "==1.1"
idna = "==2.10"
jeepney = "==0.6.0"
keyring = "==21.8.0"
lockfile = "==0.12.2"
msgpack = "==1.0.2"
pastel = "==0.2.1"
pexpect = "==4.8.0"
pipenv = "==2020.11.15"
pkginfo = "==1.7.0"
poetry = "==1.1.5"
poetry-core = "==1.0.2"
ptyprocess = "==0.7.0"
pycparser = "==2.20"
pylev = "==1.3.0"
pyparsing = "==2.4.7"
pytz = "==2021.1"
requests = "==2.25.1"
requests-toolbelt = "==0.9.1"
secretstorage = "==3.3.1"
shellingham = "==1.4.0"
six = "==1.15.0"
sqlparse = "==0.4.1"
tomlkit = "==0.7.0"
urllib3 = "==1.26.4"
virtualenv = "==20.4.3"
virtualenv-clone = "==0.5.4"
webencodings = "==0.5.1"
markdown = "*"
importlib-resources = "*"
importlib-metadata = "*"
django-post-office = "*"
bleach = "*"
xlrd = "*"
django-grappelli = "*"
django-money = "*"
django-import-export = "*"
django-admin-rangefilter = "*"
django-bleach = "*"
paypal-checkout-serversdk = "*"
pipenv-poetry-migrate = "*"
django-notifications-hq = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
graphviz = "^0.16"
pydotplus = "^2.0.2"
pydot = "^1.4.2"
django-debug-toolbar = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
